# beryl

./: Cargo.toml  README.md
.github/workflows/: build.yml  lint.yml  test.yml
src/: crystal.rs  generator.rs  lib.rs
