[package]
name = "beryl"
description = "64-bit unique identifier format"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/max-niederman/beryl.git"
homepage = "https://github.com/max-niederman/beryl"
license = "MIT"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2018"
